update html, tried to make pic work

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                     </li>
                     </span>
                 </ul>
+
+                
             </nav>
 
         </header>
@@ -65,3 +67,4 @@
 
 
 </body>
+</html> 
