--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <span style="font-family:Gill Sans, sans-serif;">
                     <li>
                         <!-- anchor element-->
-                        <a href="#about">ABOUT</a>
+                        <a href="about.html">ABOUT</a>
                     </li>
                     </span>
                     <span style="font-family:Gill Sans, sans-serif;">
@@ -32,12 +32,12 @@
                     </span>
                     <span style="font-family:Gill Sans, sans-serif;">
                     <li>
-                        <a href="#resume">RESUME</a>
+                        <a href="resume.html">RESUME</a>
                     </li>
                     </span>
                     <span style="font-family:Gill Sans, sans-serif;">
                     <li>
-                        <a href="contact">CONTACT ME</a>
+                        <a href="contact.html">CONTACT ME</a>
                     </li>
                     </span>
                 </ul>
@@ -57,10 +57,10 @@
         </section> 
 
             <article class="content">
-                            <img src="./assets/images/charlieandem.jpg" alt="Emily and her dog during Halloween 2020" >
+                            <img src="./assets/images/charlieandem.png" alt="Emily and her dog during Halloween 2020" >
                             <div class="hello">
                                 <span style="font-family: sans-serif">
-                                <p>Hello! <br> I'm Emily</br></p>
+                                <p>Hello! <br> I'm Emily</br> <br>I am a full stack developer based in Houston, TX.</br> </p>
                                 </span> 
                              </div>
                     
@@ -72,4 +72,8 @@
 
 
 </body>
+<footer>
+
+    
+</footer>
 </html> 
