--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF -8" name="viewport" content="width=device-width, initial-scale= 1.0" />
     <title>Emily Hill's Portfolio</title>
-    <link rel="stylesheet" href="./assets/css/style.css" >
+    <link rel="stylesheet" href="./assets/css/secondstyle.css" >
 </head>
 
 <body>
@@ -22,7 +22,7 @@
                     <span style="font-family:Gill Sans, sans-serif;">
                     <li>
                         <!-- anchor element-->
-                        <a href="#about">ABOUT</a>
+                        <a href="about.html">ABOUT</a>
                     </li>
                     </span>
                     <span style="font-family:Gill Sans, sans-serif;">
@@ -32,12 +32,12 @@
                     </span>
                     <span style="font-family:Gill Sans, sans-serif;">
                     <li>
-                        <a href="#resume">RESUME</a>
+                        <a href="resume.html">RESUME</a>
                     </li>
                     </span>
                     <span style="font-family:Gill Sans, sans-serif;">
                     <li>
-                        <a href="contact">CONTACT ME</a>
+                        <a href="contact.html">CONTACT ME</a>
                     </li>
                     </span>
                 </ul>
@@ -46,3 +46,36 @@
             </nav>
 
         </header>
+
+        <section class="hero">
+            <div class="sky">
+            <img src="./assets/images/houstonsky.png"> 
+            </div>
+
+        </section>
+
+        <article class="content-projects">
+            <span style="font-family:Gil Sans, sans-serif;">
+            <div class="content-content">
+                <h1>HTML Project</h1>
+            <a href="./run-buddy/index.html">    
+             <img src="./assets/images/run-buddybw.png" 
+             onmouseover="this.src='./assets/images/run-buddy.png'"
+             onmouseout="this.src= './assets/images/run-buddybw.png' " />
+            </a>
+            <p>The website "Run Buddy" shows my abilit to code with HTML and CSS. </p>
+            </span> 
+            </div>
+            
+
+
+
+        </article>
+
+</body>
+
+<footer>
+
+
+</footer>
+</html>
