add html, fix html

--- a/projects.html
+++ b/projects.html
@@ -57,16 +57,39 @@
         <article class="content-projects">
             <span style="font-family:Gil Sans, sans-serif;">
             <div class="content-content">
-                <h1>HTML Project</h1>
+                <h1>Run Buddy</h1>
+                <h4>HTML/CSS</h4>
             <a href="./run-buddy/index.html">    
              <img src="./assets/images/run-buddybw.png" 
              onmouseover="this.src='./assets/images/run-buddy.png'"
              onmouseout="this.src= './assets/images/run-buddybw.png' " />
             </a>
-            <p>The website "Run Buddy" shows my abilit to code with HTML and CSS. </p>
             </span> 
             </div>
-            
+
+            <span style="font-family:Gil sans, sans-serif;">
+            <div class="content-content">
+                <h1>Calculator</h1>
+                <h4>CSS/JavaScript/React</h4>
+            <a href="somewebsite.html">
+                <img src="./assets/images/calculatorholdbw.png"
+                onmouseover="this.src='./assets/images/calculatorhold.png' " 
+                onmouseout="this.src='./assets/images/calculatorholdbw.png' " /> 
+                </a>
+            </span>
+            </div>
+
+            <span style="font-family:Gil sans, sans-serif;">
+                <div class="content-content">
+                    <h1>Pastel Puzzles</h1>
+                    <h4>MERN Stack</h4>
+                <a href="somewebsite.html">
+                    <img src="./assets/images/pastelpuzzlesholdbw.png"
+                    onmouseover="this.src='./assets/images/pastelpuzzleshold.png' " 
+                    onmouseout="this.src='./assets/images/pastelpuzzlesholdbw.png' " /> 
+                    </a>
+                </span>
+                </div>
 
 
 
