--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     
                 <span style="font-family:Gil sans, sans-serif;">
                 <div class="content-content">
-                    <h1>Calculator</h1>
+                    <h1 , class="headings">Calculator</h1>
                     <h4>CSS/JavaScript/React</h4>
                 <a href="somewebsite.html" >
                     <img src="./assets/images/calculatorholdbw.png"
@@ -146,7 +146,7 @@
                     onmouseout="this.src='./assets/images/calculatorholdbw.png' " /> 
                     </a>
             
-                        <h1>Pastel Puzzles</h1>
+                        <h1 class="headings" >Pastel Puzzles</h1>
                         <h4>MERN Stack</h4>
                     <a href="somewebsite.html">
                         <img src="./assets/images/pastelpuzzlesholdbw.png"
@@ -154,7 +154,7 @@
                         onmouseout="this.src='./assets/images/pastelpuzzlesholdbw.png' " /> 
                         </a>
 
-                        <h1>LED Wall</h1>
+                        <h1 class="headings" >LED Wall</h1>
                         <h4>Node/IoT</h4>
                     <a href="somewebsite.html" >
                         <img src="./assets/images/calculatorholdbw.png"
@@ -163,7 +163,7 @@
                         </a>
 
 
-                        <h1>Surf Report</h1>
+                        <h1 class="headings" >Surf Report</h1>
                         <h4>MERN Stack</h4>
                     <a href="somewebsite.html">
                         <img src="./assets/images/pastelpuzzlesholdbw.png"
