add resume html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </span>
                     <span style="font-family:Gill Sans, sans-serif;">
                     <li>
-                        <a href="#resume">RESUME</a>
+                        <a href="resume.html">RESUME</a>
                     </li>
                     </span>
                     <span style="font-family:Gill Sans, sans-serif;">
