--- a/resume.html
+++ b/resume.html
@@ -53,3 +53,9 @@
             </div>
 
         </section>
+
+        <section>
+            <span style="font-family:Gill Sans, sans-serif;">
+            <h1>Resume Coming Soon!</h1>
+            </span>
+        </section>
